--- a/index.html
+++ b/index.html
@@ -174,6 +174,27 @@
                 </section>
         </div>
 
+        <script src="three.r134.min.js"></script>
+        <script src="vanta.globe.min.js"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            VANTA.GLOBE({
+                el: "html", // Target the body element
+                mouseControls: true,
+                touchControls: true,
+                gyroControls: false,
+                minHeight: 200.00,
+                minWidth: 200.00,
+                scale: 1.00,
+                scaleMobile: 1.00,
+                color: 0x46363b,
+                size: 0.80,
+                backgroundColor: 0xafd0ff
+            });
+        });
+    </script>
+
         </body>
 
 
