moving js files

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                 </section>
         </div>
 
-        <script src="three.r134.min.js"></script>
-        <script src="vanta.globe.min.js"></script>
+        <script src="scripts/three.r134.min.js"></script>
+        <script src="scripts/vanta.globe.min.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
