formatting new home page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Syne+Mono&display=swap" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Syne+Mono&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
 </head>
 
@@ -71,6 +72,23 @@
 
 
         </div>
+
+        <div class="introduction">
+
+
+            <div class="intro-text oval">
+            <p>I'm a current senior at Cornell University studying Information Science, Systems and Technology with a concentration in Data Science. I love coding, design, and exploring new technologies to solve real-world problems. </p>
+            </div>
+
+            <img class="computer-svg" src="uploads/keyboard_FILL0_wght400_GRAD0_opsz24.svg" alt="Animated GIF">
+
+
+
+
+
+        </div>
+
+
 
 
 
@@ -192,28 +210,6 @@
 
         <!-- Background effects
         Source: https://www.vantajs.com/ -->
-
-
-        <script src="scripts/three.r134.min.js"></script>
-        <script src="scripts/vanta.globe.min.js"></script>
-<!--
-        <script>
-            document.addEventListener('DOMContentLoaded', () => {
-                VANTA.GLOBE({
-                    el: "html", // Target the body element
-                    mouseControls: true,
-                    touchControls: true,
-                    gyroControls: false,
-                    minHeight: 200.00,
-                    minWidth: 200.00,
-                    scale: 1.00,
-                    scaleMobile: 1.00,
-                    color: 0x46363b,
-                    size: 0.4,
-                    backgroundColor: 0xafd0ff
-                });
-            });
-        </script> -->
 
         <script src="scripts/three.r134.min.js"></script>
         <script src="scripts/vanta.net.min.js"></script>
