proj + exp headings, brush stroke insert

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <div class="home-content">
             <img class="home-img" id="profile-pic" src="uploads/beach_pic.jpeg" alt="Nuray image">
-            <h1 class="hi">HI, I'M NURAY.</h1>
+            <h1 id="hi">HI, I'M NURAY.</h1>
             <h2 class="hi2">A STUDENT/ENGINEER/RESEARCHER/COMPUTER SCIENTIST/CREATOR</h2>
 
 
@@ -80,19 +80,15 @@
             <p>I'm a current senior at Cornell University studying Information Science, Systems and Technology with a concentration in Data Science. I love coding, design, and exploring new technologies to solve real-world problems. </p>
             </div>
 
-            <img class="computer-svg" src="uploads/keyboard_FILL0_wght400_GRAD0_opsz24.svg" alt="Animated GIF">
-
-
-
-
+            <img class="computer-svg" src="uploads/computer.svg" alt="Computer GIF">
 
         </div>
 
 
+<!--
 
 
-
-
+Old section - site.css
         <div class="pe-section" id="projects-anchor">
             <h1 class="home-title-header">My Projects and Experiences</h1>
             <div class="projects-and-experiences" >
@@ -107,9 +103,18 @@
 
 
             </div>
-        </div>
+        </div> -->
 
-        <!-- Skills section -->
+    <!-- New section: no images -->
+    <div class="pe-section" id="projects-anchor">
+        <h1 id="proj-header">Projects</h1>
+        <h1 id="exp-header">Experiences</h1>
+        <img src="uploads/brush_stroke.svg" alt="brush_stroke">
+    </div>
+
+
+
+        <!--Old Skills section
         <div class="skills-section" id="skills-anchor">
             <h1 class="home-title-header">Here are a few of my technical skills</h1>
 
@@ -124,6 +129,12 @@
                 <p>Excel</p>
             </div>
 
+
+        </div> -->
+
+        <!-- New skills section -->
+        <div class="skills-section" id="skills-anchor">
+            <h1 class="home-title-header">My technical skills</h1>
 
         </div>
 
