--- a/index.html
+++ b/index.html
@@ -107,9 +107,18 @@ Old section - site.css
 
     <!-- New section: no images -->
     <div class="pe-section" id="projects-anchor">
-        <h1 id="proj-header">Projects</h1>
-        <h1 id="exp-header">Experiences</h1>
-        <img src="uploads/brush_stroke.svg" alt="brush_stroke">
+        <div class="brushstroke">
+            <img id="brush1" src="uploads/brush_stroke.svg" alt="brush_stroke">
+        </div>
+        <h1 class="pe-h1" id="proj-header">
+            <a class="pe-header" href="projects.html">Projects</a>
+        </h1>
+        <div class="brushstroke">
+            <img id="brush2" src="uploads/brush_stroke.svg" alt="brush_stroke">
+        </div>
+        <h1 class="pe-h1" id="exp-header">
+            <a class="pe-header" href="experiences.html">Experiences</a>
+        </h1>
     </div>
 
 
