--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Syne+Mono&display=swap" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Syne+Mono&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-
+ <!-- coding svg -->
+ <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<!-- machine learning svg -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<!-- translate svg  -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<!-- communicating svg  -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<!-- creative svg -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<!-- research svg -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <header class="sticky-header">
@@ -143,13 +154,51 @@ Old section - site.css
 
         <!-- New skills section -->
         <div class="skills-section" id="skills-anchor">
-            <h1 class="home-title-header">My technical skills</h1>
+            <h1 class="home-title-header">Skills</h1>
+
+            <div class="skills-boxes">
+                <div class="skills-row">
+                    <div class="skills-group">
+                        <div class="skills-icon"><span class="material-symbols-outlined">deployed_code</span></div>
+                        <h4>Software Development</h4>
+                        <p>text</p>
+                    </div>
+                    <div class="skills-group">
+                        <div class="skills-icon"><span class="material-symbols-outlined">neurology</span></div>
+                        <h4>Machine Learning</h4>
+                        <p>text</p>
+                    </div>
+                    <div class="skills-group">
+                        <div class="skills-icon"><span class="material-symbols-outlined">translate</span></div>
+                        <h4>Translation</h4>
+                        <p>text</p>
+                    </div>
+                </div>
+
+                <div class="skills-row">
+                    <div class="skills-group">
+                        <div class="skills-icon"><span class="material-symbols-outlined">voice_selection</span></div>
+                        <h4>Communication</h4>
+                        <p>text</p>
+                    </div>
+                    <div class="skills-group">
+                        <div class="skills-icon"><span class="material-symbols-outlined">brush</span></div>
+                        <h4>Creativity</h4>
+                        <p>text</p>
+                    </div>
+                    <div class="skills-group">
+                        <div class="skills-icon"><span class="material-symbols-outlined">person_search</span></div>
+                        <h4>Research</h4>
+                        <p>text</p>
+                    </div>
+                </div>
+            </div>
 
         </div>
 
         <!-- Timeline section -->
 
-        <div id="timeline-anchor" class="timeline">
+        <!-- <div id="timeline-anchor" class="timeline">
             <h1 class="home-title-header">My educational and professional timeline</h1>
 
             <section class="timeline-wrapper">
@@ -226,7 +275,7 @@ Old section - site.css
                     </div>
 
                 </section>
-        </div>
+        </div> -->
 
         <!-- Background effects
         Source: https://www.vantajs.com/ -->
