temporary removal or footer

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ Old section - site.css
 
 </body>
 
-
+<!--
 
 
 
@@ -331,7 +331,7 @@ Old section - site.css
             <div class="footer-bottom">
                 <p>&copy; 2024 Nuray Ozden.  All rights reserved.</p>
             </div>
-        </footer>
+        </footer> -->
 
 
 
