--- a/index.html
+++ b/index.html
@@ -58,24 +58,6 @@
     <body class="body-home">
 
 
-<!-- for site.css
-        <div class="home-content">
-
-            <div class="profile-pic">
-                <img class="home-img" src="uploads/profile_pic.jpeg" alt="Nuray image">
-            </div>
-
-            <div class="content">
-                <h1 class="hi">HI, I'M NURAY.</h1>
-                <p>Welcome to my website! I'm a current senior at Cornell University studying Information Science, Systems and Technology with a concentration in Data Science. I love coding, design, and exploring new technologies to solve real-world problems.  Explore my website to learn more about my work and interests, and feel free to reach out—I'd love to connect and collaborate!</p>
-                <p>Starting Fall 2024, I will be working at <a href="https://appian.com/">Appian</a> as an Associate Solutions Engineer. I am excited to beging my journey there!</p>
-                <a href="uploads/nuray_y_ozden_resume.pdf" download="nuray_y_ozden_resume.pdf" class="download-link">Download Resume</a>
-            </div>
-
-        </div> -->
-
-        <!-- for site2.css -->
-
         <div class="home-content">
             <img class="home-img" id="profile-pic" src="uploads/beach_pic.jpeg" alt="Nuray image">
             <h1 id="hi">HI, I'M NURAY.</h1>
@@ -96,28 +78,11 @@
         </div>
 
 
-<!--
 
-
-Old section - site.css
-        <div class="pe-section" id="projects-anchor">
-            <h1 class="home-title-header">My Projects and Experiences</h1>
-            <div class="projects-and-experiences" >
-                <a href="projects.html" class="image-link">
-                        <img class="home-img" src="uploads/projects.jpeg" alt="Projects">
-                        <div class="overlay">Projects</div>
-                </a>
-                <a href="experiences.html" class="image-link">
-                        <img class="home-img" src="uploads/experiences.jpeg" alt="Experiences">
-                        <div class="overlay">Experiences</div>
-                </a>
-
-
-            </div>
-        </div> -->
+    <div id="projects-anchor"></div>
 
     <!-- New section: no images -->
-    <div class="pe-section" id="projects-anchor">
+    <div class="pe-section" >
         <div class="brushstroke">
             <img id="brush1" src="uploads/brush_stroke.svg" alt="brush_stroke">
         </div>
@@ -132,25 +97,6 @@ Old section - site.css
         </h1>
     </div>
 
-
-
-        <!--Old Skills section
-        <div class="skills-section" id="skills-anchor">
-            <h1 class="home-title-header">Here are a few of my technical skills</h1>
-
-            <div class="skills-bubbles">
-                <p>Python</p>
-                <p>SQL</p>
-                <p>HTML</p>
-                <p>PHP</p>
-                <p>CSS</p>
-                <p>JavaScript</p>
-                <p>Java</p>
-                <p>Excel</p>
-            </div>
-
-
-        </div> -->
 
         <!-- New skills section -->
         <div class="skills-section" id="skills-anchor">
@@ -297,12 +243,9 @@ Old section - site.css
         })
         </script>
 
-
-
 </body>
 
 <!--
-
 
 
         <footer>
