--- a/l60-experience.html
+++ b/l60-experience.html
@@ -30,17 +30,35 @@
 
           <div class="pe-right">
             <p class="pe-description">
-                In my time as a Research Assistant to Dr. Chris Anderson, I fine-tuned my computer science skills and learned about large-scale implementation of data analysis for the first time. Working on two projects -- one about hotel booking and the other about plane flying -- I delved  into the intricacies of data analysis and its real-world applications. I analyzed a comprehensive data set spanning over 100 pages, updated weekly, and devised a Python-based procedure to consolidate and transfer this data into a streamlined Google Sheet. I also generated bi-weekly reports to document all advancements made. Furthermore, I applied the Vehicle Routing Problem algorithm to the dataset, utilizing Google Operations Research Tools to identify the most efficient routes for 10 planes and the allocation of 50 jobs. This multifaceted experience not only honed my data management and analysis skills but also allowed me to contribute meaningfully to optimizing operational efficiency within complex logistical frameworks.            
+                In my time as a Research Assistant to Dr. Chris Anderson, I fine-tuned my computer science skills and learned about large-scale implementation of data analysis for the first time. Working on two projects -- one about hotel booking and the other about plane flying -- I delved  into the intricacies of data analysis and its real-world applications. I analyzed a comprehensive data set spanning over 100 pages, updated weekly, and devised a Python-based procedure to consolidate and transfer this data into a streamlined Google Sheet. I also generated bi-weekly reports to document all advancements made. Furthermore, I applied the Vehicle Routing Problem algorithm to the dataset, utilizing Google Operations Research Tools to identify the most efficient routes for 10 planes and the allocation of 50 jobs. This multifaceted experience not only honed my data management and analysis skills but also allowed me to contribute meaningfully to optimizing operational efficiency within complex logistical frameworks.
             </p>
           </div>
       </div>
 
-      
 
-      
+
+
 
 
   </div>
+
+
+<script src="scripts/three.r134.min.js"></script>
+<script src="scripts/vanta.net.min.js"></script>
+<script>
+VANTA.NET({
+el: "html",
+mouseControls: true,
+touchControls: true,
+gyroControls: false,
+minHeight: 200.00,
+minWidth: 200.00,
+scale: 1.00,
+scaleMobile: 1.00,
+color: 0xffffff,
+backgroundColor: 0xafd0ff
+})
+</script>
 
 </body>
 
