--- a/crochet-project.html
+++ b/crochet-project.html
@@ -19,7 +19,7 @@
     </header>
 
     <div class="pe-wrapper">
-   
+
     <!-- crochet model-->
       <div class="pe-details">
         <div class="pe-left">
@@ -35,6 +35,24 @@
 
 
   </div>
+
+
+<script src="scripts/three.r134.min.js"></script>
+<script src="scripts/vanta.net.min.js"></script>
+<script>
+VANTA.NET({
+el: "html",
+mouseControls: true,
+touchControls: true,
+gyroControls: false,
+minHeight: 200.00,
+minWidth: 200.00,
+scale: 1.00,
+scaleMobile: 1.00,
+color: 0xffffff,
+backgroundColor: 0xafd0ff
+})
+</script>
 
 </body>
 
