--- a/hbl-experience.html
+++ b/hbl-experience.html
@@ -38,12 +38,30 @@
           </div>
       </div>
 
-      
 
-      
+
+
 
 
   </div>
+
+
+  <script src="scripts/three.r134.min.js"></script>
+  <script src="scripts/vanta.net.min.js"></script>
+  <script>
+  VANTA.NET({
+  el: "html",
+  mouseControls: true,
+  touchControls: true,
+  gyroControls: false,
+  minHeight: 200.00,
+  minWidth: 200.00,
+  scale: 1.00,
+  scaleMobile: 1.00,
+  color: 0xffffff,
+  backgroundColor: 0xafd0ff
+  })
+  </script>
 
 </body>
 
