--- a/medstar-experience.html
+++ b/medstar-experience.html
@@ -30,13 +30,31 @@
 
           <div class="pe-right">
             <p class="pe-description">
-                As an Data Anlytics intern at MedStar Research Hosptal, I got my first glimpse into how data can be harnessed to answer difficult questions, specifically related to health and illlness. In this role, I undertook diverse responsibilities including creating data visualizations, organizing extensive datasets, and constructing surveys sourced from information databases. Additionally, I conducted thorough research and successfully completed four projects focusing on various aspects of patient satisfaction, personal health, and post-surgery patient status. Leveraging tools such as RedCap, Jupyter, Python, and R, I analyzed data from 200 patients across different states. I then presented the findings to executives, demonstrating a comprehensive understanding of data analysis techniques and their application in healthcare contexts. Overall, this was my first experience collaborating with superiors and doctors who showed me the ropes of dealing with sensitive data and important data, how to extract meaning from it, and how to talk about that meaning in an impactful way.           
+                As an Data Anlytics intern at MedStar Research Hosptal, I got my first glimpse into how data can be harnessed to answer difficult questions, specifically related to health and illlness. In this role, I undertook diverse responsibilities including creating data visualizations, organizing extensive datasets, and constructing surveys sourced from information databases. Additionally, I conducted thorough research and successfully completed four projects focusing on various aspects of patient satisfaction, personal health, and post-surgery patient status. Leveraging tools such as RedCap, Jupyter, Python, and R, I analyzed data from 200 patients across different states. I then presented the findings to executives, demonstrating a comprehensive understanding of data analysis techniques and their application in healthcare contexts. Overall, this was my first experience collaborating with superiors and doctors who showed me the ropes of dealing with sensitive data and important data, how to extract meaning from it, and how to talk about that meaning in an impactful way.
              </p>
           </div>
       </div>
 
-      
+
   </div>
+
+
+  <script src="scripts/three.r134.min.js"></script>
+  <script src="scripts/vanta.net.min.js"></script>
+  <script>
+  VANTA.NET({
+  el: "html",
+  mouseControls: true,
+  touchControls: true,
+  gyroControls: false,
+  minHeight: 200.00,
+  minWidth: 200.00,
+  scale: 1.00,
+  scaleMobile: 1.00,
+  color: 0xffffff,
+  backgroundColor: 0xafd0ff
+  })
+  </script>
 
 </body>
 
