exp and proj pages making longer

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a href="index.html">Home</a>
             <a href="#projects-anchor">Projects & Experiences</a>
             <a href="#skills-anchor">Skills</a>
-            <a href="#timeline-anchor">Timeline</a>
+            <!-- <a href="#timeline-anchor">Timeline</a> -->
             <a href="uploads/nuray_y_ozden_resume.pdf" download="nuray_y_ozden_resume.pdf" >Download Resume</a>
     </div>
 
