adding project info

--- a/experiences.html
+++ b/experiences.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="other-htmls" lang="en">
 
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" type="text/css" href="styles/site.css" />
+  <link rel="stylesheet" type="text/css" href="styles/site2.css" />
   <title>Nuray's Professional Website</title>
 
 </head>
@@ -21,7 +21,7 @@
     <div class="pe-container">
 
         <div class="pe-box">
-            <h4 class="pe-title">Business Analyst Intern</h4>
+            <h3 class="pe-title">Business Analyst Intern</h3>
             <p class="pe-time">Summer 2023</p>
             <a href="cox-experience.html">
             <img class="cover-image" src="uploads/cox_logo.png"
@@ -29,7 +29,7 @@
         </div>
 
         <div class="pe-box">
-            <h4 class="pe-title">Technology Correspondant RA</h4>
+            <h3 class="pe-title">Technology Correspondant RA</h3>
             <p class="pe-time">Fall 2022 - Spring 2024</p>
             <a href="hbl-experience.html">
             <img class="cover-image" src="uploads/hbl_logo.png"
@@ -37,7 +37,7 @@
         </div>
 
         <div class="pe-box">
-            <h4 class="pe-title">Computer Science RA</h4>
+            <h3 class="pe-title">Computer Science RA</h3>
             <p class="pe-time">Summer 2022</p>
             <a href="l60-experience.html">
             <img class="cover-image" src="uploads/level60_logo.png"
@@ -45,7 +45,7 @@
         </div>
 
         <div class="pe-box">
-            <h4 class="pe-title">Data Analytics Research Intern</h4>
+            <h3 class="pe-title">Data Analytics Research Intern</h3>
             <p class="pe-time">Summer 2021</p>
             <a href="medstar-experience.html">
             <img class="cover-image" src="uploads/medstar_logo.png"
