--- a/college-bias-project.html
+++ b/college-bias-project.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" type="text/css" href="styles/site.css" />
+  <link rel="stylesheet" type="text/css" href="styles/site2.css" />
   <title>Nuray's Professional Website</title>
 
 </head>
@@ -20,11 +20,11 @@
 
     <div class="pe-wrapper">
 
-    <!-- crochet model-->
+    <!-- fashion & ai project-->
       <div class="pe-details">
         <div class="pe-left">
-            <h2 class="pe-title">Crochet Machine Learning Model</h2>
-            <h4 class="pe-company">Independant Project</h4>
+            <h2 class="pe-title">Higher Education Selectivity & Racial Bias</h2>
+            <h4 class="pe-company">Algorithm Audit Project</h4>
             <p class="pe-time"></p>Spring 2024</p>
           </div>
 
