--- a/cox-experience.html
+++ b/cox-experience.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" type="text/css" href="styles/site.css" />
+  <link rel="stylesheet" type="text/css" href="styles/site2.css" />
   <title>Nuray's Professional Website</title>
 
 </head>
