--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="other-htmls" lang="en">
 
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" type="text/css" href="styles/site.css" />
+  <link rel="stylesheet" type="text/css" href="styles/site2.css" />
   <title>Nuray's Professional Website</title>
 
 </head>
@@ -20,17 +20,27 @@
     <!-- Main content -->
     <div class="pe-container">
 
+     <!-- Image source: https://unsplash.com/s/photos/college-campus -->
         <div class="pe-box">
-            <h4 class="pe-title">Crochet Machine Learning Model</h4>
+            <h3 class="pe-title">Higher Education Selectivity & Racial Bias</h3>
             <p class="pe-time">Spring 2024</p>
-            <a href="crochet-project.html">
-            <img class="cover-image" src="uploads/crochet.jpeg"
-            alt="crochet image"></a>
+            <a href="college-bias-project.html">
+            <img class="cover-image" src="uploads/college.jpeg"
+            alt="college image"></a>
+        </div>
+
+    <!-- Image Source: https://xochil.com/posts/fitting-safely-during-coronavirus -->   
+        <div class="pe-box">
+            <h3 class="pe-title">Garment Fit & AI Project</h3>
+            <p class="pe-time">Spring 2024</p>
+            <a href="garment-ai-project.html">
+            <img class="cover-image" src="uploads/fashion.jpeg"
+            alt="fashion image"></a>
         </div>
 
         <div class="pe-box">
-            <h4 class="pe-title">Turkey Earthquake Project</h4>
-            <p class="pe-time">Summer 2024</p>
+            <h3 class="pe-title">Turkey Earthquake Project</h3>
+            <p class="pe-time">Summer 2023</p>
             <a href="turkey-earthquake-project.html">
             <img class="cover-image" src="uploads/earthquake.jpeg"
             alt="earthquake image"></a>
