--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="#projects-anchor">Projects & Experiences</a>
             <a href="#skills-anchor">Skills</a>
             <!-- <a href="#timeline-anchor">Timeline</a> -->
-            <a href="uploads/nuray_y_ozden_resume.pdf" download="nuray_y_ozden_resume.pdf" >Download Resume</a>
+            <a href="uploads/nuray_y_ozden_resume.pdf" download="nuray_y_ozden_resume.pdf" >Download My Resume</a>
     </div>
 
 
@@ -107,17 +107,24 @@
                     <div class="skills-group">
                         <div class="skills-icon"><span class="material-symbols-outlined">deployed_code</span></div>
                         <h4>Software Development</h4>
-                        <p>text</p>
+                        <p>I have experience coding in Python, SQL, Java, HTML, PHP, and JavaScript. I have applied these tools 
+                            in website development and design, database management, backend programming, frontend scripting, and data analysis.
+                        </p>
                     </div>
                     <div class="skills-group">
                         <div class="skills-icon"><span class="material-symbols-outlined">neurology</span></div>
                         <h4>Machine Learning</h4>
-                        <p>text</p>
+                        <p>Through hands-on projects and assignments, I've gained proficiency in various machine learning frameworks and techniques, 
+                            including supervised and unsupervised learning, neural networks, and natural language processing. With this knowledge,
+                            I have pursued research projects that involve model development. </p>
                     </div>
                     <div class="skills-group">
                         <div class="skills-icon"><span class="material-symbols-outlined">translate</span></div>
                         <h4>Translation</h4>
-                        <p>text</p>
+                        <p>With having an understanding of software development and information technology on people in a technical sense, it is important to be able to 
+                            communicate these principles to a wide range of audiences. I have multiple experiences of creating written guides that explain technical 
+                            applications in a clear and relatable manner.
+                        </p>
                     </div>
                 </div>
 
@@ -125,17 +132,21 @@
                     <div class="skills-group">
                         <div class="skills-icon"><span class="material-symbols-outlined">voice_selection</span></div>
                         <h4>Communication</h4>
-                        <p>text</p>
+                        <p>I believe that the most important attribute that an enigeer can have is the ability to communicate their knowledge.
+                            Whether presenting findings in academic settings or collaborating with interdisciplinary teams, I strive to foster understanding through effective communication. </p>
                     </div>
                     <div class="skills-group">
                         <div class="skills-icon"><span class="material-symbols-outlined">brush</span></div>
                         <h4>Creativity</h4>
-                        <p>text</p>
+                        <p>The element of creativity is one I always try to bring it to all of my projects and experiences. The intersection of technology and design
+                            is one I hope to immerse myself in in the future, and creativity propels me towards exploring inventive avenues and pushing the boundaries of possibility.
+                        </p>
                     </div>
                     <div class="skills-group">
                         <div class="skills-icon"><span class="material-symbols-outlined">person_search</span></div>
                         <h4>Research</h4>
-                        <p>text</p>
+                        <p>Over the last 3 years, I have joined numerous research projects. The research process has opened up a new window of thinking, and has deepened my understanding 
+                            of how technology and information science can be utilized to create new connections.</p>
                     </div>
                 </div>
             </div>
