--- a/cox-experience.html
+++ b/cox-experience.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" href="styles/site2.css" />
   <title>Nuray's Professional Website</title>
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 
@@ -30,9 +30,11 @@
           </div>
 
           <div class="pe-right">
-            <p class="pe-description">
-                As a Business Analyst intern at Cox Automotive, I dove into the nitty-gritty of data management and communication channels, really learning how to wear many hats and understand all of the moving parts that go into making a business run. I created up some automated status reports, crafted SQL queries and teaming up with senior software engineers to seamlessly integrate them into the database website using PHP. That allowed clients to pull real-time reports straight from our software system, whereas previously they had to contact the software engineers directly and wait for days for the data to come back to them. Additionally, I took the reins on drafting a definitions document for our internal crew, pooling insights from over a dozen interviews.
-            </p>
+            <div class="pe-description">
+                <p>As a Business Analyst intern at Cox Automotive, I dove into the nitty-gritty of data management and communication channels, really learning how to wear many hats and understand all of the moving parts that go into making a business run. I created up some automated status reports, crafted SQL queries and teaming up with senior software engineers to seamlessly integrate them into the database website using PHP. That allowed clients to pull real-time reports straight from our software system, whereas previously they had to contact the software engineers directly and wait for days for the data to come back to them. </p>
+                <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
+                <p>Additionally, I took the reins on drafting a definitions document for our internal crew, pooling insights from over a dozen interviews.</p>
+              </div>
           </div>
       </div>
 
