adding lightning bolts

--- a/turkey-earthquake-project.html
+++ b/turkey-earthquake-project.html
@@ -27,7 +27,7 @@
         <div class="pe-left">
             <h2 class="pe-title">Turkey Earthquake Project</h2>
             <h4 class="pe-company">Independant Project</h4>
-            <p class="pe-time"></p>Summer 2023</p>
+            <p class="pe-time">Summer 2023</p>
           </div>
 
           <div class="pe-right">
