--- a/cox-experience.html
+++ b/cox-experience.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" href="styles/site2.css" />
   <title>Nuray's Professional Website</title>
+  <!-- Lightning bolt icon -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
@@ -25,7 +26,7 @@
         <div class="pe-left">
             <h2 class="pe-title">Business Analyst Intern</h2>
             <h4 class="pe-company">Cox Automotive</h4>
-            <p class="pe-time"></p>Summer 2023</p>
+            <p class="pe-time">Summer 2023</p>
             <img class="pe-second-image" src="uploads/cox_pres.jpeg">
           </div>
 
