--- a/hbl-experience.html
+++ b/hbl-experience.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" href="styles/site2.css" />
   <title>Nuray's Professional Website</title>
-
+  <!-- Lightning bolt icon -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 
@@ -26,15 +27,18 @@
         <div class="pe-left">
             <h2 class="pe-title">Technology Correspondant RA</h2>
             <h4 class="pe-company">Health Behaviors Lab</h4>
-            <p class="pe-time"></p>Fall 2022 - Spring 2024</p>
+            <p class="pe-time">Fall 2022 - Spring 2024</p>
             <img class="pe-second-image" src="uploads/hbl_lab_pic.jpeg">
           </div>
 
           <div class="pe-right">
-            <p class="pe-description">
-                Throughout my time as the Technology Correspondent on the Health Behaviors Lab at Cornell under PI Dr. Laura Bellows, I was introduced to the research arena. Through observing different research projects concerning maternal and child health, I got a front-row seat to the dynamic intersection of technology and public health. Dr. Bellows' guidance and the collaborative spirit of the lab fueled my passion for leveraging technology to address pressing health challenges.
-                <br> I have pioneered a project that implemented Boomi—an integration software company, usually used for making business processes more efficient—and data collection for research projects on maternal and early childhood educator health. Additionally, I collaborated with other members of the lab to learn about and implement a qualitative survey data software called Network Canvas. Overall, this hands-on experience has equipped me with invaluable skills and insights into how technology can be harnessed to drive meaningful advancements in public health research and practice
-            </p>
+            <div class="pe-description">
+                <p>Throughout my time as the Technology Correspondent on the Health Behaviors Lab at Cornell under PI Dr. Laura Bellows, I was introduced to the research arena. Through observing different research projects concerning maternal and child health, I got a front-row seat to the dynamic intersection of technology and public health. Dr. Bellows' guidance and the collaborative spirit of the lab fueled my passion for leveraging technology to address pressing health challenges.</p>
+                <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
+                <p>I have pioneered a project that implemented <a class="text-link" href="https://boomi.com/">Boomi</a> — an integration software company, usually used for making business processes more efficient—and data collection for research projects on maternal and early childhood educator health.</p>
+                <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
+                <p>Additionally, I collaborated with other members of the lab to learn about and implement a qualitative survey through <a class="text-link" href="https://networkcanvas.com/">Network Canvas</a>. Overall, this hands-on experience has equipped me with invaluable skills and insights into how technology can be harnessed to drive meaningful advancements in public health research and practice.</p>
+            </div>
           </div>
       </div>
 
