--- a/l60-experience.html
+++ b/l60-experience.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" href="styles/site2.css" />
   <title>Nuray's Professional Website</title>
-
+<!-- Lightning bolt icon -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 
@@ -25,13 +26,19 @@
         <div class="pe-left">
             <h2 class="pe-title">Computer Science RA</h2>
             <h4 class="pe-company">Dr. Chris Anderson & LEvel60 Consulting</h4>
-            <p class="pe-time"></p>Summer 2022</p>
+            <p class="pe-time">Summer 2022</p>
           </div>
 
           <div class="pe-right">
-            <p class="pe-description">
-                In my time as a Research Assistant to Dr. Chris Anderson, I fine-tuned my computer science skills and learned about large-scale implementation of data analysis for the first time. Working on two projects -- one about hotel booking and the other about plane flying -- I delved  into the intricacies of data analysis and its real-world applications. I analyzed a comprehensive data set spanning over 100 pages, updated weekly, and devised a Python-based procedure to consolidate and transfer this data into a streamlined Google Sheet. I also generated bi-weekly reports to document all advancements made. Furthermore, I applied the Vehicle Routing Problem algorithm to the dataset, utilizing Google Operations Research Tools to identify the most efficient routes for 10 planes and the allocation of 50 jobs. This multifaceted experience not only honed my data management and analysis skills but also allowed me to contribute meaningfully to optimizing operational efficiency within complex logistical frameworks.
-            </p>
+            <div class="pe-description">
+                <p>In my time as a Research Assistant to Dr. Chris Anderson, I fine-tuned my computer science skills and learned about large-scale implementation of data analysis for the first time. Working on two projects -- one about hotel booking and the other about plane flying -- I delved  into the intricacies of data analysis and its real-world applications.</p> 
+                <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
+
+                <p>I analyzed a comprehensive data set spanning over 100 pages, updated weekly, and devised a Python-based procedure to consolidate and transfer this data into a streamlined Google Sheet. I also generated bi-weekly reports to document all advancements made. Furthermore, I applied the <a class="text-link" href='https://developers.google.com/optimization/routing/vrp'>Google OR Tools Vehicle Routing Problem</a> algorithm to the dataset, utilizing Google Operations Research Tools to identify the most efficient routes for a small scale version of the large problem, involving 10 planes and the allocation of 50 jobs.</p> 
+                <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
+
+                <p>This multifaceted experience not only honed my data management and analysis skills but also allowed me to contribute meaningfully to optimizing operational efficiency within complex logistical frameworks.</p>
+            </div>
           </div>
       </div>
 
