removing images from proj/exp

--- a/experiences.html
+++ b/experiences.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" href="styles/site2.css" />
   <title>Nuray's Professional Website</title>
-
+  <!-- Lightning bolt icon -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body class="body-pe">
@@ -21,35 +22,38 @@
     <div class="pe-container">
 
         <div class="pe-box">
+            <a href="cox-experience.html">
             <h3 class="pe-title">Business Analyst Intern</h3>
             <p class="pe-time">Summer 2023</p>
-            <a href="cox-experience.html">
-            <img class="cover-image" src="uploads/cox_logo.png"
-            alt="cox image"></a>
+            </a>
+            <!-- <img class="cover-image" src="uploads/cox_logo.png" -->
         </div>
 
         <div class="pe-box">
+            <a href="hbl-experience.html">
             <h3 class="pe-title">Technology Correspondant RA</h3>
             <p class="pe-time">Fall 2022 - Spring 2024</p>
-            <a href="hbl-experience.html">
-            <img class="cover-image" src="uploads/hbl_logo.png"
-            alt="hbl image"></a>
+            </a>
+            <!-- <img class="cover-image" src="uploads/hbl_logo.png" -->
+
         </div>
 
         <div class="pe-box">
+            <a href="l60-experience.html">
             <h3 class="pe-title">Computer Science RA</h3>
             <p class="pe-time">Summer 2022</p>
-            <a href="l60-experience.html">
-            <img class="cover-image" src="uploads/level60_logo.png"
-            alt="level60 image"></a>
+            </a>
+            <!-- <img class="cover-image" src="uploads/level60_logo.png"
+            alt="level60 image"></a> -->
         </div>
 
         <div class="pe-box">
+            <a href="medstar-experience.html">
             <h3 class="pe-title">Data Analytics Research Intern</h3>
             <p class="pe-time">Summer 2021</p>
-            <a href="medstar-experience.html">
-            <img class="cover-image" src="uploads/medstar_logo.png"
-            alt="medstar image"></a>
+            </a>
+            <!-- <img class="cover-image" src="uploads/medstar_logo.png"
+            alt="medstar image"></a> -->
         </div>
 
     </div>
