--- a/medstar-experience.html
+++ b/medstar-experience.html
@@ -25,7 +25,7 @@
         <div class="pe-left">
             <h2 class="pe-title">Data Analytics Research Intern</h2>
             <h4 class="pe-company">MedStar</h4>
-            <p class="pe-time"></p>Summer 2021</p>
+            <p class="pe-time">Summer 2021</p>
           </div>
 
           <div class="pe-right">
