--- a/projects.html
+++ b/projects.html
@@ -22,28 +22,31 @@
 
      <!-- Image source: https://unsplash.com/s/photos/college-campus -->
         <div class="pe-box">
+            <a href="college-bias-project.html">
             <h3 class="pe-title">Higher Education Selectivity & Racial Bias</h3>
             <p class="pe-time">Spring 2024</p>
-            <a href="college-bias-project.html">
-            <img class="cover-image" src="uploads/college.jpeg"
-            alt="college image"></a>
+            </a>
+            <!-- <img class="cover-image" src="uploads/college.jpeg" -->
+            
         </div>
 
-    <!-- Image Source: https://xochil.com/posts/fitting-safely-during-coronavirus -->   
+    <!-- Image Source: https://xochil.com/posts/fitting-safely-during-coronavirus -->  
         <div class="pe-box">
+            <a href="garment-ai-project.html">
             <h3 class="pe-title">Garment Fit & AI Project</h3>
             <p class="pe-time">Spring 2024</p>
-            <a href="garment-ai-project.html">
-            <img class="cover-image" src="uploads/fashion.jpeg"
-            alt="fashion image"></a>
+            </a>
+            <!-- <img class="cover-image" src="uploads/fashion.jpeg" -->
+            <!-- alt="fashion image"> -->
         </div>
 
+
         <div class="pe-box">
+            <a href="turkey-earthquake-project.html">
             <h3 class="pe-title">Turkey Earthquake Project</h3>
             <p class="pe-time">Summer 2023</p>
-            <a href="turkey-earthquake-project.html">
-            <img class="cover-image" src="uploads/earthquake.jpeg"
-            alt="earthquake image"></a>
+            </a>
+            <!-- <img class="cover-image" src="uploads/earthquake.jpeg" -->
         </div>
 
     </div>
