--- a/college-bias-project.html
+++ b/college-bias-project.html
@@ -25,7 +25,7 @@
         <div class="pe-left">
             <h2 class="pe-title">Higher Education Selectivity & Racial Bias</h2>
             <h4 class="pe-company">Algorithm Audit Project</h4>
-            <p class="pe-time"></p>Spring 2024</p>
+            <p class="pe-time">Spring 2024</p>
           </div>
 
           <div class="pe-right">
