--- a/garment-ai-project.html
+++ b/garment-ai-project.html
@@ -25,7 +25,7 @@
         <div class="pe-left">
             <h2 class="pe-title">Garmet Fit & AI Project</h2>
             <h4 class="pe-company">Research Project</h4>
-            <p class="pe-time"></p>Spring 2024</p>
+            <p class="pe-time">Spring 2024</p>
           </div>
 
           <div class="pe-right">
