--- a/hbl-experience.html
+++ b/hbl-experience.html
@@ -33,11 +33,11 @@
 
           <div class="pe-right">
             <div class="pe-description">
-                <p>Throughout my time as the Technology Correspondent on the <a class="text-link" href="https://blogs.cornell.edu/healthbehavlab/">Health Behaviors Lab</a> at Cornell under PI Dr. Laura Bellows, I was introduced to the research arena. Through observing different research projects concerning maternal and child health, I got a front-row seat to the dynamic intersection of technology and public health. Dr. Bellows' guidance and the collaborative spirit of the lab fueled my passion for leveraging technology to address pressing health challenges.</p>
+                <p>Throughout my time as the Technology Correspondent on the <a target="_blank" class="text-link" href="https://blogs.cornell.edu/healthbehavlab/">Health Behaviors Lab</a> at Cornell under PI Dr. Laura Bellows, I was introduced to the research arena. Through observing different research projects concerning maternal and child health, I got a front-row seat to the dynamic intersection of technology and public health. Dr. Bellows' guidance and the collaborative spirit of the lab fueled my passion for leveraging technology to address pressing health challenges.</p>
                 <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
-                <p>I have pioneered a project that implemented <a class="text-link" href="https://boomi.com/">Boomi</a> — an integration software company, usually used for making business processes more efficient—and data collection for research projects on maternal and early childhood educator health.</p>
+                <p>I have pioneered a project that implemented <a target="_blank" class="text-link" href="https://boomi.com/">Boomi</a> — an integration software company, usually used for making business processes more efficient—and data collection for research projects on maternal and early childhood educator health.</p>
                 <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
-                <p>Additionally, I collaborated with other members of the lab to learn about and implement a qualitative survey through <a class="text-link" href="https://networkcanvas.com/">Network Canvas</a>. Overall, this hands-on experience has equipped me with invaluable skills and insights into how technology can be harnessed to drive meaningful advancements in public health research and practice.</p>
+                <p>Additionally, I collaborated with other members of the lab to learn about and implement a qualitative survey through <a target="_blank" class="text-link" href="https://networkcanvas.com/">Network Canvas</a>. Overall, this hands-on experience has equipped me with invaluable skills and insights into how technology can be harnessed to drive meaningful advancements in public health research and practice.</p>
             </div>
           </div>
       </div>
@@ -68,5 +68,6 @@
   </script>
 
 </body>
+
 
 </html>
