--- a/turkey-earthquake-project.html
+++ b/turkey-earthquake-project.html
@@ -41,14 +41,14 @@
 
                 <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
 
-                <p><a class="text-link" href="https://colab.research.google.com/github/nurayyozden/Earthquake-Project/blob/main/P2.ipynb">Part 2</a> delves into preliminary data analysis and aims to unravel patterns, trends, and anomalies embedded within the data. From descriptive statistics to exploratory visualizations, each analysis layer peels back a layer and offers glimpses into the past while laying the groundwork for subsequent modeling.</p>
+                <p><a target="_blank" class="text-link" href="https://colab.research.google.com/github/nurayyozden/Earthquake-Project/blob/main/P2.ipynb">Part 2</a> delves into preliminary data analysis and aims to unravel patterns, trends, and anomalies embedded within the data. From descriptive statistics to exploratory visualizations, each analysis layer peels back a layer and offers glimpses into the past while laying the groundwork for subsequent modeling.</p>
                 <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
 
 
-                <p>Finally, <a class="text-link" href="https://colab.research.google.com/github/nurayyozden/Earthquake-Project/blob/main/P3.ipynb">Part 3</a> brings machine learning models to take the data a step further and see what predictive power can be unveiled. Through the implentation of Linear Regression and Random Forest Classifier models, we can see if the magnitude of earthqaukes can be predicted and classify earthqaukes. Most importantly, I got a sense for where the data lacks.</p>
+                <p>Finally, <a target="_blank" class="text-link" href="https://colab.research.google.com/github/nurayyozden/Earthquake-Project/blob/main/P3.ipynb">Part 3</a> brings machine learning models to take the data a step further and see what predictive power can be unveiled. Through the implentation of Linear Regression and Random Forest Classifier models, we can see if the magnitude of earthqaukes can be predicted and classify earthqaukes. Most importantly, I got a sense for where the data lacks.</p>
                 <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
 
-                <p>While this was a beginner project of mine, it offers some insight into how earthqauke attribute prediction may function and allowed me to bring my computer science background to a deeply personal and important topic. It was also one of the first projects I did completely on my own with no exterior motivator other than my own curiosity! The full project code can be found on my <a class="github-embed" href="https://github.com/nurayyozden">GitHub.</a></p>
+                <p>While this was a beginner project of mine, it offers some insight into how earthqauke attribute prediction may function and allowed me to bring my computer science background to a deeply personal and important topic. It was also one of the first projects I did completely on my own with no exterior motivator other than my own curiosity! The full project code can be found on my <a target="_blank" class="github-embed" href="https://github.com/nurayyozden">GitHub.</a></p>
             </div>
           </div>
       </div>
