adding to bias project

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <div class="skills-group">
                         <div class="skills-icon"><span class="material-symbols-outlined">voice_selection</span></div>
                         <h4>Communication</h4>
-                        <p>I believe that the most important attribute that an enigeer can have is the ability to communicate their knowledge.
+                        <p>I believe that the most important attribute that an engineer can have is the ability to communicate their knowledge.
                             Whether presenting findings in academic settings or collaborating with interdisciplinary teams, I strive to foster understanding through effective communication. </p>
                     </div>
                     <div class="skills-group">
