adding lightning bolt import

--- a/college-bias-project.html
+++ b/college-bias-project.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" href="styles/site2.css" />
   <title>Nuray's Professional Website</title>
-
+<!-- Lightning bolt icon -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 
@@ -35,10 +36,10 @@
             <p>We chose to research algorithmic bias in higher education selectivity, considering it directly affected all of us. We examined how race may be indicate of the selectivity of colleges and universities, thus highlighting potential disparities in access and opportunities for individuals from different racial backgrounds.</p>
             <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
 
-            <p>Engaging in this project on algorithmic bias has provided me with a new perspective on the implications of AI in our society. While all of the attention currently seems to be on the powerful capabilites of AI, the importance of understanding how and why our models are just as, if not more, important than what it can do. this project provided a snapshot into that framework.</p>
+            <p>Engaging in this project on algorithmic bias has provided me with a new perspective on the implications of AI in our society. While all of the attention currently seems to be on the powerful capabilites of AI, the importance of understanding how and why our models are just as, if not more, important than what it can do. This project provided a snapshot into that framework.</p>
             <div class="lightning"><span class="material-symbols-outlined">bolt</span></div>
 
-            <p>The code and Powerpoint materials for this project can be found <a href="https://github.com/nurayyozden/Higher-Education-Algorithm-Exploration">here</a>.</p>
+            <p>The code and Powerpoint materials for this project can be found on my <a href="https://github.com/nurayyozden/Higher-Education-Algorithm-Exploration">GitHub</a>.</p>
           </div>
       </div>
 
